--- a/PaginaComCss/css/style.css
+++ b/PaginaComCss/css/style.css
@@ -75,3 +75,20 @@
  .colaboradores .cards img{
      width: 80px;
  }
+
+    iframe{
+     margin: auto;
+     display: block;
+ }
+ footer{
+     padding: 20px 0;
+     /*margin: 10px 0 5px 0;*/
+     margin-top: 10px;
+     background-color: #CCC;
+     text-align: center;
+ }
+ body{
+     margin: 0;
+     padding: 0;
+     
+ }
